infrastructure/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-photo-album
  namespace: oit-sepe-example
  labels:
    app: my-photo-album
spec:
  # Tell Deployment how to find its Pod(s)
  selector:
    matchLabels:
      app: my-photo-album
  template:
    # Label Pod(s) so Deployment can find them
    metadata:
      labels:
        app: my-photo-album
    spec:
      containers:
      - name: photo-album
        # Use the internal hostname for the image registry
        image: image-registry.openshift-image-registry.svc.cluster.local:5000/oit-sepe-example/my-photo-album:latest
        # Enable DEBUG logging on the static web server
        resources:
          limits:
            cpu: 300m
            memory: 256Mi
          requests:
            cpu: 0m
            memory: 0Mi
