infrastructure/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-photo-album
  namespace: oit-sepe-example
  labels:
    app: my-photo-album
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: my-photo-album
